# secureScan_project

./: .dockerignore  .editorconfig  .env.example  .env.sample  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  Makefile  PR_BODY.md  README.md  beta_ready.patch  docker-compose.nopublish.yml  docker-compose.override.yml  docker-compose.yml  nginx.conf  package-lock.json  project_structure.txt  render.yaml  run-backend.cmd  run-frontend.cmd  tmp_check_output.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: refactor-apiurl.md
.github/pr_bodies/: chore_frontend_nginx_port.md
.github/scripts/: nightly_checkpoint.ps1  nightly_shutdown.ps1
.github/workflows/: build.yml  bundle-check.yml  ci-ping.yml  ci.yml  codeql-analysis.yml  deploy-prod.yml  deploy-render.yml  deploy.yml  docker-build.yml  e2e-smoke.yml  securascan-clean.yml  securascan.yml  smoke.yml  trivy.yml
docs/: ci_cleanup_report.md  deploy_checklist.md  frontend_powershell.md  render_deploy_checklist.md  smoke_render.md
scripts/: check_render_assets.ps1  check_render_cors.ps1  smoke.ps1  smoke.sh  smoke_render.sh
secureScan_Back/: .env.example  .env.staging  Cargo.toml  Dockerfile.backend  Dockerfile.debug  README.md  entrypoint.sh  health.txt  package-lock.json  ping.txt  start.sh  test-output.txt  toolchain.txt
secureScan_Back/migrations/: 0002_create_scans.up.sql  0003_create_scan_results.up.sql  0004_create_users.up.sql
secureScan_Back/src/: db.rs  main.rs  scanner.rs  webhook.rs  webhook_tests.rs
secureScan_Back/src/domain/: errors.rs  mod.rs  scan_service.rs  scans_repo.rs  user.rs  users_repo.rs
secureScan_Back/src/jobs/: mod.rs  queue.rs  workers.rs
secureScan_Back/src/services/: auth.rs
secureScan_Back/src/utils/: telemetry.rs
secureScan_Back/src/web/handlers/: auth.rs  extra.rs  health.rs  mod.rs  scans.rs  webhook.rs
secureScan_Front/: .dockerignore  .env.example  .env.production  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  proxy-health.txt  smoke.sh  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+41 files in other folders)
