[package]
name = "securascan-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Web framework ---
actix-web = "4.5"
actix-cors = "0.7"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime ---
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# --- Database (SQLx) ---
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- Utils ---
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# additional helpful crates
futures-util = "0.3"

# --- Web & parsing ---
reqwest = { version = "0.12.23", features = ["json", "gzip", "default-tls"] }
scraper = "0.24"
url = "2"
time = "0.3"

# HMAC / crypto for webhook verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.4"

[profile.release]
opt-level = 3
lto = false
codegen-units = 8
panic = "unwind"



